--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 
+
+
 <b>Hello, This is Asim Alqurashi!! Welcome to my webpage :)..&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>Positivity is key to success!</i></b>
 <head>
     <title>
@@ -17,7 +19,7 @@
 
 <h1>Asim Alqurashi, Pursuing my Bachelor Degree</h1>
 <h2><i>Business Administration Student</i></h2>
-
+q
 <p>I am an ambitious bachelor student starting my studies at <a href="https://umaine.edu">Umaine.</a> </p>
 
 [<img src="asim-usa.jpg" width="100" height="100">]
@@ -30,6 +32,8 @@ Web Page Directory (menu):
 
 
     <li>Saint Mary's University</li> <a href="saint.html">SMU.</a>
+    <li> University of Maine</li> <a href="maine.html">UMAINE.</a>
+    <li>MY SKILLS</li> <a href="skills.html">Skills.</a>
 
 
 </ul>
@@ -40,15 +44,11 @@ Links to:
     <li>Facebook</li> <a href="https://www.facebook.com/people/Assim-Alqurashi/100009795334311">My Personal Faceebook Page.</a>
 
 
-    <li>Saint Mary's University</li> <a href="saint.html">SMU.</a>
+
 </ul>
 
 </body>
 
-<ul>Relevant skills:</ul>
-<li>Communication professionally.</li>
-<li>Enthusiastic in working in fast-paced environment.</li>
-<li>Proficiency in MS office, as scored an A in computer application course.</li>
 
 </html>
 </html>
