--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Asim's Webpage
     </title>
     <head>
-        <title>My Publications</title>
+        <title>My School Life!</title>
         <link href="styles.css" rel="stylesheet">
     </head>
 
@@ -19,12 +19,12 @@
 
 <h1>Asim Alqurashi, Pursuing my Bachelor Degree</h1>
 <h2><i>Business Administration Student</i></h2>
-q
+
 <p>I am an ambitious bachelor student starting my studies at <a href="https://umaine.edu">Umaine.</a> </p>
 
-[<img src="asim-usa.jpg" width="100" height="100">]
+<img src="businessadministration.jpg" width="300" height="150">
 
-<p>I have finished two years of my bachelor degree back in Canada at <a href="https://smu.ca/">Saint Mary's University.</a> </p>
+<p>I have finished two years of my bachelor degree in Business Administration back in Canada at <a href="https://smu.ca/">Saint Mary's University.</a> </p>
 
 Web Page Directory (menu):
 
@@ -46,6 +46,7 @@ Links to:
 
 
 </ul>
+
 
 </body>
 
