--- a/maine.html
+++ b/maine.html
@@ -1,23 +1,33 @@
+<html>
 
-<title>
-    Asim's Webpage
-</title>
+<h1>University of Maine</h1>
+
+<h2><I>First Adventure, moved all the way from Canada!!</I></h2>
+
+<img src="canada.jpeg" width="250" height="150">
+
+
+
 <link href="styles.css" rel="stylesheet">
 
 
-<body>I chose Umaine for many reasons:
-
-<li> -  Orono, the town that UMaine is in, is almost entirely populated by college students.</li>
+<body>
 
 
 
-   <li>- Friendly atmosphere, helpful and resourceful academic administration.</li>
+<p>I chose Umaine for many reasons:</p>
+
+<li>Orono, the town that UMaine is in, is almost entirely populated by college students.</li>
 
 
-    <li>I am a transfer student now at Umaine and I w ill work hard to achieve my goals. </li>
+
+<li>Friendly atmosphere, helpful and resourceful academic administration.</li>
+
+
+<li>am a transfer student now at Umaine and I w ill work hard to achieve my goals. </li>
 
 
 </body>
 
 
-
+</html>
