--- a/skills.html
+++ b/skills.html
@@ -1,11 +1,7 @@
-
-
-
-
-
+<html>
 
 <title>
-    Asim's Webpage
+    My Skills Set
 
 
 </title>
@@ -17,13 +13,18 @@
 
 
 
-        <body>
+<body>
 
-        <ul>Relevant skills:</ul>
-
+<ul>Relevant skills:</ul>
 <li>Communication professionally.</li>
 
 <li>Enthusiastic in working in fast-paced environment.</li>
 
 <li>Proficiency in MS office, as scored an A in computer application course.</li>
+
+<img src="creativityideas.jpg" width="250" height="150">
 </body>
+
+
+
+</html>
