--- a/saint.html
+++ b/saint.html
@@ -7,7 +7,7 @@
     </title>
 
     <head>
-        <title>My Publications</title>
+        <title>My life at SMU 2016-2018</title>
         <link href="styles2.css" rel="stylesheet">
     </head>
 
@@ -20,7 +20,7 @@
 
 <p>    </p>
 
-<img src="asim-usa.jpg" width="100" height="100">
+<img src="saint-marys.JPG" width="300" height="250">
 
 <p>   </p>
 
